removed web.js file

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "karma start test/karma.conf.js"
+    "test": "karma start test/karma.conf.js",
+    "postinstall": "bower install && grunt build"
+
   },
   "dependencies": {
     "express": "^4.13.4",
